週間、月間、年間グラフを追加 ボタンの2度押し禁止 グラフのスクロールボタン追加ー命令なし

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:onClick="createLineChartData_week"
             android:text="週"
-            android:textSize="20dp"/>
+            android:textSize="30dp"/>
 
         <Button
             android:id="@+id/month"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:onClick="createLineChartData_month"
             android:text="月"
-            android:textSize="20dp"/>
+            android:textSize="30dp"/>
 
         <Button
             android:id="@+id/year"
@@ -45,8 +45,25 @@
             android:layout_height="wrap_content"
             android:onClick="createLineChartData_year"
             android:text="年"
-            android:textSize="20dp"/>
+            android:textSize="30dp"/>
 
+        <Button
+            android:id="@+id/left_move"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="createLeft_move"
+            android:text="←"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/right_move"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="createRight_move"
+            android:text="→"
+            android:textSize="30dp"/>
 
 
     </LinearLayout>
